@@ -2,6 +2,9 @@ LanguageTool Change Log
 
 2.9 (release planned for 2015-03-30)
 
+-German:
+    -added a few new rules
+
 -API:
     -LanguageIdentifierTools has been removed. Use LanguageIdentifier instead.
 
